modified buttons to fix contrast and focus

--- a/style.css
+++ b/style.css
@@ -335,12 +335,12 @@ body {
 }
 
 .btntext:hover {
-    background-color: #635ccc;
+    background-color: #0d0575;
     color: #fff;
 }
 
 .btntext:active {
-    background-color: rgb(7, 21, 148);
+    background-color: rgb(0, 1, 3);
     transition: 0.5s;
     color: #fff;
 }
